# neural-net

./: .gitignore  CMakeLists.txt
include/: img.h  matrix.h  nn.h
src/: img.cpp  main.cpp  matrix.cpp  nn.cpp
